kubernetes/apps/meddle/patch-nfsserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfsserver-svc
  namespace: nfsserver
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nfs.home.parents-basement.win
