kubernetes/apps/meddle/arr-httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: arr
spec:
  hostnames:
    - sonarr.home.parents-basement.win
