kubernetes/apps/meddle/arr-jellyfin-public-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-public
  namespace: arr
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: "hkj0ah4db6f.sn.mynetname.net"
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - jellyfin.parents-basement.win
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
