kubernetes/apps/meddle/patch-arr-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: arr
spec:
  hostnames:
    - sonarr.home.parents-basement.win
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: arr
spec:
  hostnames:
    - radarr.home.parents-basement.win
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: arr
spec:
  hostnames:
    - prowlarr.home.parents-basement.win
