kubernetes/apps/meddle/patch-arr-qbittorrent-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: arr
spec:
  hostnames:
    - qbittorrent.home.parents-basement.win
