kubernetes/apps/meddle/patch-redmanager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redmanager
  namespace: redmanager
spec:
  hostnames:
    - redmanager.home.parents-basement.win
