kubernetes/apps/meddle/patch-seerr-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: seerr
spec:
  hostnames:
    - seerr.home.parents-basement.win
