kubernetes/apps/meddle/redmanager-navidrome-httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: redmanager
spec:
  hostnames:
    - navidrome.home.parents-basement.win
