kubernetes/apps/meddle/seerr-public-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-public
  namespace: seerr
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: public-eg
      namespace: envoy-gateway-system
  hostnames:
    - seerr.parents-basement.win
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seerr-seerr-chart
          port: 80
